sc/inc/cellvalues.hxx
@@ -15,6 +15,7 @@
 #include <vector>
 
 class ScColumn;
+class ScFormulaCell;
 
 namespace svl {
 
@@ -63,6 +64,7 @@ public:
     void swapNonEmpty( ScColumn& rCol );
 
     void assign( const std::vector<double>& rVals );
+    void assign( const std::vector<ScFormulaCell*>& rVals );
 
     size_t size() const;
 
