sc/source/ui/inc/TableFillingAndNavigationTools.hxx
@@ -80,6 +80,7 @@ public:
             formula::FormulaGrammar::Grammar eGrammar );
 
     void writeFormula(const OUString& aFormula);
+    void writeFormulas(const std::vector<OUString>& rFormulas);
     void writeMatrixFormula(const OUString& aFormula, SCCOL nCols = 1, SCROW nRows = 1);
     void writeString(const OUString& aString);
     void writeString(const char* aCharArray);
