sc/source/ui/inc/undocell.hxx
@@ -32,6 +32,7 @@
 class ScDocShell;
 class ScPatternAttr;
 class ScRangeName;
+class ScFormulaCell;
 
 class ScUndoCursorAttr: public ScSimpleUndo
 {
@@ -361,6 +362,7 @@ public:
 
     CellValues& GetOldValues() { return maOldValues;}
     void SetNewValues( const std::vector<double>& rVals );
+    void SetNewValues( const std::vector<ScFormulaCell*>& rVals );
 };
 
 } // namespace sc
